added a reevaluate endpoint alwoing the ai and user work together if AI sugestions dont work or are wrong
